--- a/src/pages/AccommodationDetail/AccommodationDetail.module.css
+++ b/src/pages/AccommodationDetail/AccommodationDetail.module.css
@@ -249,6 +249,32 @@
   object-fit: cover;
 }
 
+.thumbnailPlaceholder {
+  width: 100%;
+  height: 100%;
+  background-color: #f7f7f7;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 0;
+  cursor: default;
+  pointer-events: none;
+  position: relative;
+}
+
+.thumbnailPlaceholder:nth-child(4) {
+  border-bottom-right-radius: 12px;
+}
+
+.thumbnailPlaceholder:nth-child(1) {
+  border-top-right-radius: 12px;
+}
+
+.thumbnailPlaceholder svg {
+  color: #b0b0b0;
+  opacity: 0.5;
+}
+
 .viewAllButton {
   position: absolute;
   bottom: 16px;
